# robotflow-connector

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NEXT_STEPS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/robotflow_connectors/: __init__.py  base.py  cli.py  config.py  registry.py
src/robotflow_connectors/auth/: __init__.py  browser_auth.py  claude_oauth.py  cli_auth.py  codex_oauth.py  oauth_pkce.py  oauth_server.py  store.py  token_extractor.py
src/robotflow_connectors/providers/: __init__.py  anthropic_compat.py  openai_compat.py
tests/: test_anthropic_compat.py  test_auth_modules.py  test_auth_store.py  test_base.py  test_cli.py  test_config_edge_cases.py  test_error_paths.py  test_registry.py
